<resources>
    <!-- Strings generales -->
    <string name="app_name">Estaciones</string>
    <string name="hello">Hola carajitos</string>
    <string name="identif">Id:</string>
    <string name="mercado">Mercado </string>
    <string name="barinas">B</string>
    <string name="nombres">ET:</string>
    <string name="direccion">Dir:</string>
	<string name="lat">Lat:</string>
	<string name="long_et">Lon:</string>
	<string name="ciudad">Ciudad </string>
	<string name="estado">Est:</string>
    <string name="titulo_menu">Operar Estacion</string>
    <string name="blanco"> </string>
    <string name="puntos">...</string>
    <string name="crear_cliente">Crear Estacion</string>
    <string name="busq_ident">Buscar  por ID</string>
    <string name="modif_ident">Modificar Estacion</string>
    <string name="busq_nombre">Buscar por Nombre</string>
    <string name="busq_nombre2">Cargar Nombres Letras Ini</string>
    <string name="busq_nombre3">Busq Nombres Lista</string>

    <!-- Conjunto de Strings para el View Mercado -->
    <string-array name="mercados">
        <item>Barinas</item>
        <item>Guanare</item>
        <item>Acarigua</item>
        <item>Barquisimeto</item>
    </string-array>
</resources>
