<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.julio.estaciones.MainActivity">

        <LinearLayout
            android:id="@+id/layid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spimercado"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/mercados"
                android:layout_weight="0.7" />

            <EditText
                android:id="@+id/edtmercado"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                tools:ignore="LabelFor"
                android:visibility="invisible"
                android:layout_weight="1.4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/identif"
                android:id="@+id/lblid_et"
                android:gravity="start"
                android:layout_weight="1.2" />

            <EditText
                android:id="@+id/edtid_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                tools:ignore="LabelFor"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btbuscaid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/puntos"
                android:layout_weight="1.12" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/laynom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/nombres"
                android:id="@+id/lblnombre_et"
                android:layout_weight="0.75" />

            <EditText
                android:id="@+id/edtnombre_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                tools:ignore="LabelFor"
                android:layout_weight="0.25" />

            <Button
                android:id="@+id/btbuscaini"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/puntos"
                android:layout_weight="0.75" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layspi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spinombre_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dropDownWidth="match_parent"
                android:layout_weight="0.15" />

            <Button
                android:id="@+id/btbuscalista"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/puntos"
                android:layout_weight="0.85" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/laydir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

		<TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/direccion"
            android:id="@+id/lbldireccion_et"
            android:gravity="start"
            android:layout_weight="0.93" />

        <EditText
            android:id="@+id/edtdireccion_et"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:inputType="textMultiLine"
            tools:ignore="LabelFor"
            android:layout_weight="0.07" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/laylat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

		<TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/lat"
            android:id="@+id/lbllat_et"
            android:gravity="start"
            android:layout_weight="0.05" />

        <EditText
            android:id="@+id/edtlat_et"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:layout_weight="0.95" />

		<TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/long_et"
            android:id="@+id/lbllong_et"
            android:layout_weight="0.05" />

        <EditText
            android:id="@+id/edtlong_et"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:layout_weight="0.95" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edtciudad_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:layout_weight="0.8" />

		<TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/estado"
            android:id="@+id/lblestado_et"
            android:layout_weight="1.35" />

        <EditText
            android:id="@+id/edtestado_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:layout_weight="0.8" />

    </LinearLayout>

</LinearLayout>
